--- a/extensions/2025-06-28.md
+++ b/extensions/2025-06-28.md
@@ -1,1 +1,5 @@
-Testing
+# VS Code Extension of the Day - 2025-06-29
+
+**Name:** Code Spell Checker  
+**Marketplace Link:** [View Extension](https://marketplace.visualstudio.com/items?itemName=streetsidesoftware.code-spell-checker)  
+**ID:** `streetsidesoftware.code-spell-checker`  
