Add overview box also

--- a/extensions/2025-07-01.md
+++ b/extensions/2025-07-01.md
@@ -3,3 +3,4 @@
 **Name:** Path Intellisense  
 **Marketplace Link:** [View Extension](https://marketplace.visualstudio.com/items?itemName=christian-kohler.path-intellisense)  
 **ID:** `christian-kohler.path-intellisense`  
+**Overview:** Path Intellisense autocompletes filenames in your code, making it easier to import files and navigate your project.  
