--- a/extensions/2025-06-28.md
+++ b/extensions/2025-06-28.md
@@ -3,3 +3,4 @@
 **Name:** Code Spell Checker  
 **Marketplace Link:** [View Extension](https://marketplace.visualstudio.com/items?itemName=streetsidesoftware.code-spell-checker)  
 **ID:** `streetsidesoftware.code-spell-checker`  
+**Overview:** Code Spell Checker is a basic spell checker that works well with code and documents, helping you catch common spelling errors.  
