--- a/extensions/2025-06-30.md
+++ b/extensions/2025-06-30.md
@@ -3,3 +3,4 @@
 **Name:** GitLens  
 **Marketplace Link:** [View Extension](https://marketplace.visualstudio.com/items?itemName=eamodio.gitlens)  
 **ID:** `eamodio.gitlens`  
+**Overview:** GitLens supercharges the built-in VS Code Git capabilities, providing rich insights into code authorship, history, and more, right in your editor.  
