--- a/extensions/2025-07-02.md
+++ b/extensions/2025-07-02.md
@@ -1,5 +1,6 @@
 # VS Code Extension of the Day - 2025-07-02
 
-**Name:** Path Intellisense  
-**Marketplace Link:** [View Extension](https://marketplace.visualstudio.com/items?itemName=christian-kohler.path-intellisense)  
-**ID:** `christian-kohler.path-intellisense`  
+**Name:** Debugger for Chrome  
+**Marketplace Link:** [View Extension](https://marketplace.visualstudio.com/items?itemName=msjsdiag.debugger-for-chrome)  
+**ID:** `msjsdiag.debugger-for-chrome`  
+**Overview:** Debugger for Chrome enables you to debug your JavaScript code running in Google Chrome directly from VS Code.  
