Updated entire repo

--- a/extensions/2025-07-13.md
+++ b/extensions/2025-07-13.md
@@ -1,6 +1,30 @@
 # VS Code Extension of the Day - 2025-07-13
 
 **Name:** Prettier  
+**Category:** Code Quality & Formatting  
 **Marketplace Link:** [View Extension](https://marketplace.visualstudio.com/items?itemName=esbenp.prettier-vscode)  
 **ID:** `esbenp.prettier-vscode`  
 **Overview:** Prettier is an opinionated code formatter that enforces a consistent style by parsing your code and re-printing it with its own rules, supporting many languages and integrating with most editors.  
+
+
+## Tags
+`formatter`, `code-quality`, `javascript`, `typescript`, `css`, `html`
+
+## Why This Extension?
+
+This extension is particularly useful for developers working with formatter, code-quality, javascript. It helps improve your development workflow by providing enhanced functionality for formatter.
+
+## Installation
+
+1. Open VS Code
+2. Press `Ctrl+Shift+X` to open the Extensions view
+3. Search for "Prettier"
+4. Click **Install**
+
+## Related Extensions
+
+Looking for more extensions in the **Code Quality & Formatting** category? Check out our other recommendations for similar tools and utilities.
+
+---
+
+*This extension was automatically selected from our curated list of the best VS Code extensions for developers. Each day, we feature a different extension to help you discover new tools that can improve your coding experience.*
