--- a/extensions/2025-07-20.md
+++ b/extensions/2025-07-20.md
@@ -1,6 +1,30 @@
 # VS Code Extension of the Day - 2025-07-20
 
 **Name:** GitLens  
+**Category:** Git & Version Control  
 **Marketplace Link:** [View Extension](https://marketplace.visualstudio.com/items?itemName=eamodio.gitlens)  
 **ID:** `eamodio.gitlens`  
 **Overview:** GitLens supercharges the built-in VS Code Git capabilities, providing rich insights into code authorship, history, and more, right in your editor.  
+
+
+## Tags
+`git`, `version-control`, `history`, `blame`
+
+## Why This Extension?
+
+This extension is particularly useful for developers working with git, version-control, history. It helps improve your development workflow by providing enhanced functionality for git.
+
+## Installation
+
+1. Open VS Code
+2. Press `Ctrl+Shift+X` to open the Extensions view
+3. Search for "GitLens"
+4. Click **Install**
+
+## Related Extensions
+
+Looking for more extensions in the **Git & Version Control** category? Check out our other recommendations for similar tools and utilities.
+
+---
+
+*This extension was automatically selected from our curated list of the best VS Code extensions for developers. Each day, we feature a different extension to help you discover new tools that can improve your coding experience.*
