--- a/extensions/2025-07-24.md
+++ b/extensions/2025-07-24.md
@@ -1,6 +1,30 @@
 # VS Code Extension of the Day - 2025-07-24
 
 **Name:** Bracket Pair Colorizer 2  
+**Category:** Productivity & Navigation  
 **Marketplace Link:** [View Extension](https://marketplace.visualstudio.com/items?itemName=CoenraadS.bracket-pair-colorizer-2)  
 **ID:** `CoenraadS.bracket-pair-colorizer-2`  
 **Overview:** Bracket Pair Colorizer 2 allows matching brackets to be identified with colors, making it easier to read and debug code with nested structures.  
+
+
+## Tags
+`brackets`, `syntax-highlighting`, `readability`, `productivity`
+
+## Why This Extension?
+
+This extension is particularly useful for developers working with brackets, syntax-highlighting, readability. It helps improve your development workflow by providing enhanced functionality for brackets.
+
+## Installation
+
+1. Open VS Code
+2. Press `Ctrl+Shift+X` to open the Extensions view
+3. Search for "Bracket Pair Colorizer 2"
+4. Click **Install**
+
+## Related Extensions
+
+Looking for more extensions in the **Productivity & Navigation** category? Check out our other recommendations for similar tools and utilities.
+
+---
+
+*This extension was automatically selected from our curated list of the best VS Code extensions for developers. Each day, we feature a different extension to help you discover new tools that can improve your coding experience.*
