--- a/extensions/2025-07-29.md
+++ b/extensions/2025-07-29.md
@@ -1,6 +1,30 @@
 # VS Code Extension of the Day - 2025-07-29
 
 **Name:** ESLint  
+**Category:** Code Quality & Formatting  
 **Marketplace Link:** [View Extension](https://marketplace.visualstudio.com/items?itemName=dbaeumer.vscode-eslint)  
 **ID:** `dbaeumer.vscode-eslint`  
 **Overview:** ESLint is a popular linter for JavaScript and TypeScript that helps you find and fix problems in your code, enforcing coding standards and best practices.  
+
+
+## Tags
+`linter`, `javascript`, `typescript`, `code-quality`
+
+## Why This Extension?
+
+This extension is particularly useful for developers working with linter, javascript, typescript. It helps improve your development workflow by providing enhanced functionality for linter.
+
+## Installation
+
+1. Open VS Code
+2. Press `Ctrl+Shift+X` to open the Extensions view
+3. Search for "ESLint"
+4. Click **Install**
+
+## Related Extensions
+
+Looking for more extensions in the **Code Quality & Formatting** category? Check out our other recommendations for similar tools and utilities.
+
+---
+
+*This extension was automatically selected from our curated list of the best VS Code extensions for developers. Each day, we feature a different extension to help you discover new tools that can improve your coding experience.*
