--- a/extensions/2025-07-11.md
+++ b/extensions/2025-07-11.md
@@ -1,6 +1,30 @@
 # VS Code Extension of the Day - 2025-07-11
 
 **Name:** Live Server  
+**Category:** Web Development  
 **Marketplace Link:** [View Extension](https://marketplace.visualstudio.com/items?itemName=ritwickdey.LiveServer)  
 **ID:** `ritwickdey.LiveServer`  
 **Overview:** Live Server launches a local development server with live reload for static and dynamic pages, making web development faster and easier.  
+
+
+## Tags
+`web-development`, `live-reload`, `server`, `html`, `css`
+
+## Why This Extension?
+
+This extension is particularly useful for developers working with web-development, live-reload, server. It helps improve your development workflow by providing enhanced functionality for web-development.
+
+## Installation
+
+1. Open VS Code
+2. Press `Ctrl+Shift+X` to open the Extensions view
+3. Search for "Live Server"
+4. Click **Install**
+
+## Related Extensions
+
+Looking for more extensions in the **Web Development** category? Check out our other recommendations for similar tools and utilities.
+
+---
+
+*This extension was automatically selected from our curated list of the best VS Code extensions for developers. Each day, we feature a different extension to help you discover new tools that can improve your coding experience.*
