--- a/extensions/2025-07-12.md
+++ b/extensions/2025-07-12.md
@@ -1,6 +1,30 @@
 # VS Code Extension of the Day - 2025-07-12
 
 **Name:** Debugger for Chrome  
+**Category:** Testing & Debugging  
 **Marketplace Link:** [View Extension](https://marketplace.visualstudio.com/items?itemName=msjsdiag.debugger-for-chrome)  
 **ID:** `msjsdiag.debugger-for-chrome`  
 **Overview:** Debugger for Chrome enables you to debug your JavaScript code running in Google Chrome directly from VS Code.  
+
+
+## Tags
+`debugging`, `chrome`, `javascript`, `web-development`
+
+## Why This Extension?
+
+This extension is particularly useful for developers working with debugging, chrome, javascript. It helps improve your development workflow by providing enhanced functionality for debugging.
+
+## Installation
+
+1. Open VS Code
+2. Press `Ctrl+Shift+X` to open the Extensions view
+3. Search for "Debugger for Chrome"
+4. Click **Install**
+
+## Related Extensions
+
+Looking for more extensions in the **Testing & Debugging** category? Check out our other recommendations for similar tools and utilities.
+
+---
+
+*This extension was automatically selected from our curated list of the best VS Code extensions for developers. Each day, we feature a different extension to help you discover new tools that can improve your coding experience.*
